--- a/ASD/week1/index.html
+++ b/ASD/week1/index.html
@@ -22,8 +22,7 @@
 <body>
 <!--Begin Home Page-->
 	<div data-role="page" id="home" data-theme="b" data-content-theme="b">
-		<div data-role="header" id="mainheader" data-position="fixed">
-			<img src="img/medicalTiny.png" align="left">
+		<div data-role="header" id="mainHeader" data-position="fixed">
 			<h1>Med Tracker</h1>
 		</div>
 			<ul></ul>
@@ -111,8 +110,7 @@
 	<div data-role="page" id="addItem" data-theme="b" data-content-theme="b">
 <!--Remove form action with jquery-->
 		<form action="" method="post" id="addItemForm">
-			<div data-role="header" id="mainheader" data-position="fixed">
-				<img src="img/medicalTiny.png" align="left">
+			<div data-role="header" id="addItemHeader" data-position="fixed">
 				<h1>Add Event</h1>
 			</div>
 			<fieldset data-role="fieldcontain">
@@ -214,8 +212,8 @@
 
 <!--Begin Data Page to Display Data-->
 	<div data-role="page" id="display" data-theme="b" data-content-theme="b">
-		<div data-role="header" id="mainheader" data-position="fixed">
-				<img src="img/medicalTiny.png" align="left">
+		<div data-role="header" id="displayHeader" data-position="fixed">
+				
 				<h1>Events</h1>
 		</div>
 		<div data-role="footer" data-position="fixed" data-id="home">
@@ -235,9 +233,8 @@
 <!--Begin Settings Page-->
 
 	<div data-role="page" id="settings" data-theme="b" data-content-theme="b">
-		<div data-role="header" id="mainheader" data-position="fixed">
-					<img src="img/medicalTiny.png" align="left">
-					<h1>Settings</h1>
+		<div data-role="header" id="settingsHeader" data-position="fixed">
+			<h1>Settings</h1>			
 		</div>
 			<div data-role="footer" data-position="fixed" data-id="home">
 				<div data-role="navbar">
