--- a/ASD/Week2/index.html
+++ b/ASD/Week2/index.html
@@ -181,15 +181,15 @@
 		</div>
 
 			<ul style="padding:20px 20px 20px 20px">
-				<input type="button" id="homeLink" value="Load JSON" data-theme="e" data-icon="refresh" data-iconpos="right"/>
+				<input type="button" id="loadjson" value="Load JSON" data-theme="e" data-icon="refresh" data-iconpos="right"/>
 			</ul>
 
 			<ul style="padding:0px 20px 0px 20px">
-				<input type="button" id="homeLink" value="Load XML" data-theme="e" data-icon="refresh" data-iconpos="right"/>
+				<input type="button" id="loadxml" value="Load XML" data-theme="e" data-icon="refresh" data-iconpos="right"/>
 			</ul>
 
 			<ul style="padding:20px 20px 20px 20px">
-				<input type="button" id="homeLink" value="Load CSV" data-theme="e" data-icon="refresh" data-iconpos="right"/>
+				<input type="button" id="loadcsv" value="Load CSV" data-theme="e" data-icon="refresh" data-iconpos="right"/>
 			</ul>
 
 		<div data-role="footer" data-position="fixed" data-id="home">
@@ -204,8 +204,8 @@
 	</div>
 
 <!-- JavaScript under here -->
-	<script src="js/libs/jQueryv1.7.1.js"></script>
-	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+	<script src="js/libs/jquery-1.7.2.min.js"></script>
+	<script src="js/libs/jquery.mobile-1.1.1.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 	<script src="js/json.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
