Add Headers to Display Page.

--- a/ASD/Week2/index.html
+++ b/ASD/Week2/index.html
@@ -159,6 +159,11 @@
 			<h1>Display</h1>
 		</div>
 
+		<div data-role="content" id="eventHeader"style="background:url(img/lightBlue.gif)" data-theme="b" data-content-theme="b">
+
+		</div>
+
+
 		<div data-role="content" id="eventDisplay"style="background:url(img/lightBlue.gif)" data-theme="b" data-content-theme="b">
 
 		</div>
